# disasterserver

./: .gitignore  Config.json  README.md  changelog.txt  start_server.sh
BetterServer/: .editorconfig  BanList.cs  BetterServer.csproj  BetterServer.sln  Ext.cs  FastBit.cs  FastBitReader.cs  KickList.cs  Logger.cs  Options.cs  PacketType.cs  Program.cs  ServerConfig.json  StatServer.cs  TcpPacket.cs  Terminal.cs  UdpPacket.cs
BetterServer/Data/: Character.cs  Config.cs  ExeCharacter.cs  OSType.cs  Peer.cs  Player.cs  RevivalData.cs  Vector2.cs
BetterServer/Entities/: Act9Wall.cs  BlackRing.cs  CreamRing.cs  DTAss.cs  DTBall.cs  DTTailsDoll.cs  EggmanTracker.cs  Entity.cs  EntitySpawner.cs  ExellerClone.cs  Fart.cs  GHZThunder.cs  HDDoor.cs  KAFSpeedBooster.cs  LCChainController.cs  LCEye.cs  MovingSpikeController.cs  NAPIce.cs  NAPSnowball.cs  NotPerfectController.cs  PFLift.cs  RMZShard.cs  RMZSlime.cs  RMZSlimeSpawner.cs  Ring.cs  TCGom.cs  TailsProjectile.cs  VVLava.cs  VVVase.cs  YCRSmokeController.cs
BetterServer/FastBit/: .cs
BetterServer/Maps/: Act9.cs  AngelIsland.cs  DarkTower.cs  DesertTown.cs  DotDotDot.cs  FartZone.cs  GreenHill.cs  HauntingDream.cs  HideAndSeek2.cs  KindAndFair.cs  LimpCity.cs  MajinForest.cs  Map.cs  NastyParadise.cs  NotPerfect.cs  PricelessFreedom.cs  RavineMist.cs  TortureCave.cs  (+2 more)
BetterServerGUI/: CMakeLists.txt  CMakeLists.txt.user.7c97598  CMakeLists.txt.user.ed0525a  export.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
ExeNet/: README.md  TcpServer.cs  TcpSession.cs  UdpServer.cs
(+16 files in other folders)
